--- a/server/package.json
+++ b/server/package.json
@@ -9,20 +9,27 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.2.0",
+    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
+    "mongodb-memory-server": "^10.0.0",
     "mongoose": "^8.5.1",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.12",
+    "@types/supertest": "^6.0.2",
     "nodemon": "^3.1.4"
   },
   "scripts": {
-    "start": "nodemon --watch \"*.ts\" --exec \"ts-node\" ./src/server.ts"
+    "start": "nodemon --watch \"*.ts\" --exec \"ts-node\" ./src/server.ts",
+    "test": "jest --watch"
   }
 }
