--- a/server/package.json
+++ b/server/package.json
@@ -20,13 +20,17 @@
     "typescript": "^5.5.4"
   },
   "devDependencies": {
+    "@eslint/js": "^9.11.0",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.12",
     "@types/supertest": "^6.0.2",
-    "nodemon": "^3.1.4"
+    "eslint": "^9.11.0",
+    "globals": "^15.9.0",
+    "nodemon": "^3.1.4",
+    "typescript-eslint": "^8.6.0"
   },
   "scripts": {
     "start": "nodemon --watch \"*.ts\" --exec \"ts-node\" ./src/server.ts",
