--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "typescript-eslint": "^8.6.0"
   },
   "scripts": {
+    "lint": "eslint \"src/**/*.{ts,tsx}\"",
     "start": "nodemon --watch \"*.ts\" --exec \"ts-node\" ./src/server.ts",
     "test": "jest --watch"
   }
