--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "express": "^4.19.2",
     "express-validator": "^7.2.0",
     "jest": "^29.7.0",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
     "mongodb-memory-server": "^10.0.0",
