--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "mongodb": "^6.8.0",
     "mongodb-memory-server": "^10.0.0",
     "mongoose": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
@@ -26,6 +27,7 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.14.12",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.11.0",
