--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "jest": "^29.7.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "migrate-mongo": "^11.0.0",
     "mongodb": "^6.8.0",
     "mongodb-memory-server": "^10.0.0",
     "mongoose": "^8.5.1",
@@ -43,6 +44,10 @@
     "start": "nodemon --watch \"*.ts\" --exec \"ts-node\" ./src/server.ts",
     "test": "jest --watch",
     "test:coverage": "jest --coverage",
-    "check-types": "tsc --noEmit"
+    "check-types": "tsc --noEmit",
+    "migrate": "migrate-mongo up",
+    "migrate-undo": "migrate-mongo down",
+    "migrate-create": "migrate-mongo create",
+    "migrate-status": "migrate-mongo status"
   }
 }
